--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@
 :root{
     --background-color: #609EA2;
     --primary-color: #F0EEED;
-    --game-over-color: #C92C6D;
+    --game-over-color: #e13c3c;
     --font-family: font-family: 'Quicksand', sans-serif;
 }
 
